# enum_error_example

./: Cargo.toml
app/: Cargo.toml
app/src/: main.rs
entity/: Cargo.toml
entity/src/: post.rs
migration/: Cargo.toml
